Atualizações nos formularios Cart_app

--- a/templates/pagination.html
+++ b/templates/pagination.html
@@ -1,3 +1,6 @@
+{% comment %} pode ser usada em diversas paginas
+pois todos os templates possui o tag page {% endcomment %}
+
 <div>
     {% if page.has_previous %}
     <a href="?page={{ page.previous_page_number }}">Anterior</a>
