--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/style.css' %}" />
-    <title>{% block title %}Lojinha &copyJSofwares{% endblock title %}</title>
+    <title>{% block title %}Lojinha &copy;JSofwares{% endblock title %}</title>
     {% block head %}{% endblock head %}
 </head>
 
@@ -31,6 +31,9 @@
                     <li class="nav-item">
                         {% block sobrenos %}<a href="{% url 'Pages_app:about' %}" class="nav-link lead mr-4 font-weight-bold">Sobre Nós</a>{% endblock sobrenos %}
                     </li>
+                    <li class="nav-item">
+                        <a href="{% url 'Cart_app:cartdetail' %}" class="nav-link lead mr-4 font-weight-bold">Meu Carrinho</a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -47,5 +50,4 @@
         crossorigin="anonymous"></script>
 
 </body>
-
 </html>
