--- a/templates/about.html
+++ b/templates/about.html
@@ -6,18 +6,11 @@
 <div class="container my-3">
     <h1 class="font-weight-bold">Sobre nós</h1>
     <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, totam iure numquam quaerat amet, officiis
-        accusantium dolor assumenda dolores esse dignissimos voluptatem. Commodi laborum non minima dolor illum
-        reiciendis est.Temporibus delectus quam odit voluptatibus debitis nesciunt optio voluptates ut inventore porro
-        perferendis, quidem magnam repellat quo ratione, quos quod? Nesciunt, in quidem. Necessitatibus sapiente ad iure
-        impedit quod cumque?
+        Olá! Meu nome é Jonathas David e fui o desenvolvedor desse projeto chamado "Lojinha Django" com ajuda do Youtuber Fabio Rucci.
+        Infelizmente não deseolvi até os passos finais em que precisa lidar com o pagamento, porem todos os serviçoes de listagem, compra e carrinho estao funcionando.        
     </p>
     <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur laborum nam aliquid nostrum a omnis temporibus
-        deserunt fugit similique quod? Aliquam, eius quos quam laudantium ea deserunt consectetur magnam
-        soluta.Accusamus enim fugit voluptatem, quasi, labore tempora adipisci magni ea voluptatum culpa recusandae qui
-        reiciendis maiores ratione animi velit corrupti sequi ab eum placeat. Voluptatem quaerat nesciunt reiciendis
-        aperiam vero.
+        Caso queira saber como o projeto foi construido basta aceessar meu <a href="">GitHub</a>
     </p>
 </div>
 {% block sobrenos %}{% endblock sobrenos %}
