--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
     <nav class="navbar navbar-expand-sm py-3 border-bottom navbar-light">
         <div class="container">
             <a href="{% url 'Pages_app:home' %}" class="navbar-brand">
-                <span class="font-weight-bold h3">Loja Python</span>
+                <span class="font-weight-bold h3">Lojinha Django</span>
             </a>
 
             <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
@@ -48,6 +48,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
         crossorigin="anonymous"></script>
+    
+        {% block script %}
+        {% endblock script %}
 
 </body>
 </html>
