--- a/templates/about.html
+++ b/templates/about.html
@@ -6,11 +6,10 @@
 <div class="container my-3">
     <h1 class="font-weight-bold">Sobre nós</h1>
     <p>
-        Olá! Meu nome é Jonathas David e fui o desenvolvedor desse projeto chamado "Lojinha Django" com ajuda do Youtuber Fabio Rucci.
-        Infelizmente não deseolvi até os passos finais em que precisa lidar com o pagamento, porem todos os serviçoes de listagem, compra e carrinho estao funcionando.        
+        Dar os creditos a pessoa que me ajudou bastante na conclusão desse projeto <a href="https://www.linkedin.com/in/fabioruicci/?originalSubdomain=br" target="_blank">Fabrio Ruicci</a>
     </p>
     <p>
-        Caso queira saber como o projeto foi construido basta aceessar meu <a href="">GitHub</a>
+        Enquanto a mim (Jonathas) ficarei estudando mais sobre Python + Django
     </p>
 </div>
 {% block sobrenos %}{% endblock sobrenos %}
