--- a/templates/home.html
+++ b/templates/home.html
@@ -8,18 +8,11 @@
 <div class="container my-3">
     <h1 class="font-weight-bold">Olá!</h1>
     <p>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consectetur autem beatae saepe at nulla accusamus,
-        mollitia quibusdam laborum, voluptatem corporis molestiae ipsa, id quasi distinctio deserunt et. Ipsam, dolorem
-        quidem.Itaque, magnam explicabo! Corrupti eos optio repellat debitis omnis voluptates laudantium fuga dolore
-        incidunt autem. Veritatis harum sunt eveniet sequi, impedit quaerat modi assumenda recusandae molestias adipisci
-        laborum cumque ad.
+        Olá! Meu nome é Jonathas David e fui o desenvolvedor desse projeto chamado "Lojinha Django" com ajuda do Youtuber <a href="https://www.youtube.com/c/fabioruicce">Fabio Ruicci</a>.
+        Infelizmente não deseolvi até os passos finais em que precisa lidar com o pagamento, porem todos os serviçoes de listagem, compra e carrinho estao funcionando.
     </p>
     <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid non porro temporibus, unde pariatur sit
-        doloremque molestiae fugit, nostrum, atque beatae praesentium vero deserunt aspernatur cumque culpa reiciendis
-        corrupti dolores!Illum ratione enim repellendus quas? Inventore at aut aliquid minus pariatur facilis id
-        adipisci consequuntur soluta doloremque. Sit quae quisquam quis molestiae similique esse natus atque saepe rem
-        placeat? Nostrum?
+        Caso queira saber como o projeto foi construido basta aceessar meu <a href="https://github.com/Rip4568/MarketplacePython" target="_blank">GitHub</a>.
     </p>
 </div>
 
